# ClipboardDesktopRust

./: .gitignore  Cargo.toml  README.md
src/: content.rs  main.rs  tray_icon.rs
ui/: content.slint  main.slint
ui/icon/: icon.icns
ui/widget/: borderless-window.slint
wix/: License.rtf  main.wxs
